gen/ACTonParser.java
// Generated from C:/Users/Taha/Desktop/compiler_prg1/src\ACTon.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ACTonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MSGHANDLER=1, INITIAL=2, EXTENDS=3, ACTORVARS=4, KNOWNACTORS=5, ACTOR=6, 
		PRINT=7, FOR=8, ELSE=9, IF=10, SENDER=11, SELF=12, MAIN=13, STRING=14, 
		BOOLEAN=15, INT=16, CONTINUE=17, BREAK=18, STRINGVALUE=19, INTVALUE=20, 
		BOOLEANVALUE=21, WS=22, COMMENT=23, COMMENTLINE=24, IDENTIFIER=25, COMMA=26, 
		COLON=27, SEMICOLON=28, RBRACE=29, LBRACE=30, RPARENTH=31, LPARENTH=32, 
		LSQBRACE=33, RSQBRACE=34, PLUS=35, MINUS=36, MULT=37, DIV=38, MOD=39, 
		PLUSPLUS=40, MINUSMINUS=41, ISEQUAL=42, NOTEQUAL=43, LT=44, GT=45, AND=46, 
		OR=47, NOT=48, EQUALS=49, DOT=50, QUESTION=51;
	public static final int
		RULE_program = 0, RULE_actor = 1, RULE_knownActor = 2, RULE_actorVars = 3, 
		RULE_msgHandler = 4, RULE_main = 5, RULE_actorDec = 6, RULE_forLoop = 7, 
		RULE_ifStatement = 8, RULE_printFunc = 9, RULE_functionCall = 10, RULE_initialInp = 11, 
		RULE_functionInp = 12, RULE_handlerContent = 13, RULE_argDec = 14, RULE_varDec = 15, 
		RULE_primitive = 16, RULE_varEval = 17, RULE_lValue = 18, RULE_expression = 19, 
		RULE_exp01 = 20, RULE_exp0 = 21, RULE_exp1 = 22, RULE_exp2 = 23, RULE_exp3 = 24, 
		RULE_exp4 = 25, RULE_exp5 = 26, RULE_exp6 = 27, RULE_exp7 = 28, RULE_exp8 = 29, 
		RULE_exp9 = 30, RULE_idDotid = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "actor", "knownActor", "actorVars", "msgHandler", "main", 
			"actorDec", "forLoop", "ifStatement", "printFunc", "functionCall", "initialInp", 
			"functionInp", "handlerContent", "argDec", "varDec", "primitive", "varEval", 
			"lValue", "expression", "exp01", "exp0", "exp1", "exp2", "exp3", "exp4", 
			"exp5", "exp6", "exp7", "exp8", "exp9", "idDotid"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'msghandler'", "'initial'", "'extends'", "'actorvars'", "'knownactors'", 
			"'actor'", "'print'", "'for'", "'else'", "'if'", "'sender'", "'self'", 
			"'main'", "'string'", "'boolean'", "'int'", "'continue'", "'break'", 
			null, null, null, null, "'//'", null, null, "','", "':'", "';'", "'}'", 
			"'{'", "')'", "'('", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'++'", "'--'", "'=='", "'!='", "'<'", "'>'", "'&&'", "'||'", "'!'", 
			"'='", "'.'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MSGHANDLER", "INITIAL", "EXTENDS", "ACTORVARS", "KNOWNACTORS", 
			"ACTOR", "PRINT", "FOR", "ELSE", "IF", "SENDER", "SELF", "MAIN", "STRING", 
			"BOOLEAN", "INT", "CONTINUE", "BREAK", "STRINGVALUE", "INTVALUE", "BOOLEANVALUE", 
			"WS", "COMMENT", "COMMENTLINE", "IDENTIFIER", "COMMA", "COLON", "SEMICOLON", 
			"RBRACE", "LBRACE", "RPARENTH", "LPARENTH", "LSQBRACE", "RSQBRACE", "PLUS", 
			"MINUS", "MULT", "DIV", "MOD", "PLUSPLUS", "MINUSMINUS", "ISEQUAL", "NOTEQUAL", 
			"LT", "GT", "AND", "OR", "NOT", "EQUALS", "DOT", "QUESTION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ACTon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ACTonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				actor();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ACTOR );
			setState(69);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public TerminalNode ACTOR() { return getToken(ACTonParser.ACTOR, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ACTonParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ACTonParser.IDENTIFIER, i);
		}
		public TerminalNode LPARENTH() { return getToken(ACTonParser.LPARENTH, 0); }
		public TerminalNode INTVALUE() { return getToken(ACTonParser.INTVALUE, 0); }
		public TerminalNode RPARENTH() { return getToken(ACTonParser.RPARENTH, 0); }
		public TerminalNode LBRACE() { return getToken(ACTonParser.LBRACE, 0); }
		public KnownActorContext knownActor() {
			return getRuleContext(KnownActorContext.class,0);
		}
		public ActorVarsContext actorVars() {
			return getRuleContext(ActorVarsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ACTonParser.RBRACE, 0); }
		public TerminalNode EXTENDS() { return getToken(ACTonParser.EXTENDS, 0); }
		public List<MsgHandlerContext> msgHandler() {
			return getRuleContexts(MsgHandlerContext.class);
		}
		public MsgHandlerContext msgHandler(int i) {
			return getRuleContext(MsgHandlerContext.class,i);
		}
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitActor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitActor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(ACTOR);
			setState(72);
			((ActorContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			System.out.print("ActorDec: " + ((ActorContext)_localctx).IDENTIFIER.getText());
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(74);
				match(EXTENDS);
				setState(75);
				((ActorContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				System.out.print(", " + ((ActorContext)_localctx).IDENTIFIER.getText());
				}
			}

			System.out.println("");
			setState(80);
			match(LPARENTH);
			setState(81);
			match(INTVALUE);
			setState(82);
			match(RPARENTH);
			setState(83);
			match(LBRACE);
			setState(84);
			knownActor();
			setState(85);
			actorVars();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MSGHANDLER) {
				{
				{
				setState(86);
				msgHandler();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KnownActorContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public TerminalNode KNOWNACTORS() { return getToken(ACTonParser.KNOWNACTORS, 0); }
		public TerminalNode LBRACE() { return getToken(ACTonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ACTonParser.RBRACE, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ACTonParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ACTonParser.IDENTIFIER, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ACTonParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ACTonParser.SEMICOLON, i);
		}
		public KnownActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knownActor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterKnownActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitKnownActor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitKnownActor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KnownActorContext knownActor() throws RecognitionException {
		KnownActorContext _localctx = new KnownActorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_knownActor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(KNOWNACTORS);
			setState(95);
			match(LBRACE);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(96);
				((KnownActorContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				System.out.print("knownActor: " + ((KnownActorContext)_localctx).IDENTIFIER.getText());
				setState(98);
				((KnownActorContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				System.out.println(", " + ((KnownActorContext)_localctx).IDENTIFIER.getText());
				setState(100);
				match(SEMICOLON);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorVarsContext extends ParserRuleContext {
		public TerminalNode ACTORVARS() { return getToken(ACTonParser.ACTORVARS, 0); }
		public TerminalNode LBRACE() { return getToken(ACTonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ACTonParser.RBRACE, 0); }
		public List<VarDecContext> varDec() {
			return getRuleContexts(VarDecContext.class);
		}
		public VarDecContext varDec(int i) {
			return getRuleContext(VarDecContext.class,i);
		}
		public ActorVarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorVars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterActorVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitActorVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitActorVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorVarsContext actorVars() throws RecognitionException {
		ActorVarsContext _localctx = new ActorVarsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actorVars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(ACTORVARS);
			setState(109);
			match(LBRACE);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << BOOLEAN) | (1L << INT))) != 0)) {
				{
				{
				setState(110);
				varDec();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MsgHandlerContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public Token INITIAL;
		public TerminalNode MSGHANDLER() { return getToken(ACTonParser.MSGHANDLER, 0); }
		public TerminalNode LPARENTH() { return getToken(ACTonParser.LPARENTH, 0); }
		public TerminalNode LBRACE() { return getToken(ACTonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ACTonParser.RBRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ACTonParser.IDENTIFIER, 0); }
		public TerminalNode INITIAL() { return getToken(ACTonParser.INITIAL, 0); }
		public TerminalNode RPARENTH() { return getToken(ACTonParser.RPARENTH, 0); }
		public List<VarDecContext> varDec() {
			return getRuleContexts(VarDecContext.class);
		}
		public VarDecContext varDec(int i) {
			return getRuleContext(VarDecContext.class,i);
		}
		public List<HandlerContentContext> handlerContent() {
			return getRuleContexts(HandlerContentContext.class);
		}
		public HandlerContentContext handlerContent(int i) {
			return getRuleContext(HandlerContentContext.class,i);
		}
		public List<ArgDecContext> argDec() {
			return getRuleContexts(ArgDecContext.class);
		}
		public ArgDecContext argDec(int i) {
			return getRuleContext(ArgDecContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ACTonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ACTonParser.COMMA, i);
		}
		public MsgHandlerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_msgHandler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterMsgHandler(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitMsgHandler(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitMsgHandler(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MsgHandlerContext msgHandler() throws RecognitionException {
		MsgHandlerContext _localctx = new MsgHandlerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_msgHandler);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(MSGHANDLER);
			System.out.print("MsgHandlerDec: ");
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(120);
				((MsgHandlerContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				System.out.print(((MsgHandlerContext)_localctx).IDENTIFIER.getText());
				}
				break;
			case INITIAL:
				{
				setState(122);
				((MsgHandlerContext)_localctx).INITIAL = match(INITIAL);
				System.out.print(((MsgHandlerContext)_localctx).INITIAL.getText());
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(126);
			match(LPARENTH);
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RPARENTH:
				{
				setState(127);
				match(RPARENTH);
				}
				break;
			case STRING:
			case BOOLEAN:
			case INT:
				{
				{
				setState(128);
				argDec();
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(129);
					match(COMMA);
					setState(130);
					argDec();
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(RPARENTH);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			System.out.println("");
			setState(141);
			match(LBRACE);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << BOOLEAN) | (1L << INT))) != 0)) {
				{
				{
				setState(142);
				varDec();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << FOR) | (1L << IF) | (1L << SENDER) | (1L << SELF) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(148);
				handlerContent();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(ACTonParser.MAIN, 0); }
		public TerminalNode LBRACE() { return getToken(ACTonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ACTonParser.RBRACE, 0); }
		public List<ActorDecContext> actorDec() {
			return getRuleContexts(ActorDecContext.class);
		}
		public ActorDecContext actorDec(int i) {
			return getRuleContext(ActorDecContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(MAIN);
			setState(157);
			match(LBRACE);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(158);
				actorDec();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorDecContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<TerminalNode> IDENTIFIER() { return getTokens(ACTonParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ACTonParser.IDENTIFIER, i);
		}
		public InitialInpContext initialInp() {
			return getRuleContext(InitialInpContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ACTonParser.COLON, 0); }
		public FunctionInpContext functionInp() {
			return getRuleContext(FunctionInpContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ACTonParser.SEMICOLON, 0); }
		public ActorDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).enterActorDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ACTonListener ) ((ACTonListener)listener).exitActorDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ACTonVisitor ) return ((ACTonVisitor<? extends T>)visitor).visitActorDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorDecContext actorDec() throws RecognitionException {
		ActorDecContext _localctx = new ActorDecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_actorDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			((ActorDecContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			System.out.print("ActorInstantiation: " + ((ActorDecContext)_localctx).IDENTIFIER.getText());
			setState(168);
			((ActorDecContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			System.out.print(", " + ((ActorDecContext)_localctx).IDENTIFIER.getText());
			setState(170);
			initialInp();
			System.out.println("");
			setState(172);
			match(COLON);
			setState(173);
			functionInp();
			setState(174);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
